Fix list color too close with moderndark theme on mobile view.
Thanks to gerald41, Meeques, Go-rom, mfilser, jghaanstra and xet7 !

Fixes #4436,
fixes #4254

--- a/client/components/boards/boardColors.styl
+++ b/client/components/boards/boardColors.styl
@@ -858,7 +858,7 @@ setBoardClear(color1,color2)
 
   .swimlane
     background: #2a2a2a
-    line-height: 15px
+    line-height: 18px
     max-height: 100%
 
   /* Lists */
@@ -880,7 +880,7 @@ setBoardClear(color1,color2)
     background: #555555
 
   .list-header
-    padding: 10px
+    background: #6a6a6a
 
   .list-header .viewer
     padding-left: 10px
